--- a/Inhalt/04_Inhalt/content_data_preparation.tex
+++ b/Inhalt/04_Inhalt/content_data_preparation.tex
@@ -216,6 +216,7 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
             \[ d_{3} = [0,0,0,1,0,0,0,1]\]
             
             \subsubsection{Tf-Idf}
+            \label{section:tfidf}
             The \ac{TF-IDF} model aims to capture more meaning from the corpus by considering the composition of the whole corpus for the calculation of individual document vectors. \ac{TF-IDF} makes two assumptions about natural language:
             \begin{enumerate}
             	\item A word $t_{i} $ which occurs very frequently in one document is considered to describe a text very well (term frequency).
@@ -319,6 +320,8 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
             	
             	
             \subsection{Practical Implementation}
+            
+            include the unit test
 			
             
             
