--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -467,6 +467,19 @@
   file = {/Users/I518232/Zotero/storage/T39ZUH2P/invoice-management.html}
 }
 
+@online{pcaVStsne,
+  title = {Dimensionality {{Reduction}} for {{Data Visualization}}: {{PCA}} vs {{TSNE}} vs {{UMAP}} vs {{LDA}}},
+  shorttitle = {Dimensionality {{Reduction}} for {{Data Visualization}}},
+  author = {Sivarajah, Sivakar},
+  date = {2020-12-31T14:12:39},
+  url = {https://towardsdatascience.com/dimensionality-reduction-for-data-visualization-pca-vs-tsne-vs-umap-be4aa7b1cb29},
+  urldate = {2022-05-21},
+  abstract = {Visualising a high-dimensional dataset using: PCA, TSNE, LDA and UMAP},
+  langid = {english},
+  organization = {{Medium}},
+  file = {/Users/I518232/Zotero/storage/4SC9XTD9/dimensionality-reduction-for-data-visualization-pca-vs-tsne-vs-umap-be4aa7b1cb29.html}
+}
+
 @book{vajjala2020practical,
   title = {Practical Natural Language Processing: {{A}} Comprehensive Guide to Building Real-World {{NLP}} Systems},
   author = {Vajjala, S. and Majumder, B. and Gupta, A. and Surana, H.},
