--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -14,6 +14,7 @@
 	\acro{CoE}{Center of Excellence}
 	\acrodefplural{CoE}{Centers of Excellence}
 	\acro{DBSCAN}{Density-based Spatial Clustering of Applications with Noise}
+	\acro{DR}{Dimensionality Reduction}
 	\acro{ERP}{Enterprise Resource Planning}
 	\acro{FFNN}{Feed-Forward Neural Network}
 	\acro{GIL}{Global Interpreter Lock}
@@ -25,10 +26,12 @@
 	\acro{NLP}{Natural Language Processing}
 	\acro{NLTK}{Natural Language Toolkit}
 	\acro{OCR}{Optical Character Recognition}
+	\acro{PCA}{Principal Component Analysis}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
 	\acro{sklearn}{scikit-learn}
 	\acro{SQL}{Short Query Language}
 	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
+	\acro{t-SNE}{T-Distributed Stochastic Neighbor Embedding}
 	\acro{TPU}{Tensor Processing Unit}
 
 
