--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -100,7 +100,7 @@
 %\include{Inhalt/04_Inhalt/literaturHinweis}
 
 \include{Inhalt/04_Inhalt/introduction}
-\include{Inhalt/04_Inhalt/Objectives and Criteria}
+\include{Inhalt/04_Inhalt/ObjectivesandCriteria}
 \include{Inhalt/04_Inhalt/fundamentals}
 
 \include{Inhalt/04_Inhalt/content_dataset_selection}
