--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -253,8 +253,8 @@
 
 \label{benchmarkDF}
 \begin{figure}[h!]
-	\centering
-	\includegraphics[height=17cm]{Bilder/appendix/dfvsdict.png}
+	%\left
+	\includegraphics[height=15cm]{Bilder/appendix/dfvsdict.png}
 	\label{fig:dbscan-plot}
 \end{figure}
 \begin{lstlisting}[caption={Benchmark of Indexing with Python Data Structures}]
