--- a/Inhalt/04_Inhalt/outlook.tex
+++ b/Inhalt/04_Inhalt/outlook.tex
@@ -2,3 +2,5 @@
 \section{Conclusion}
 \section{Outlook}
 Other process model could have been used.
+One document could belong into many clusters (sparse clusters)
+Not universal sentence encoder but word encoder weighted
