--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -423,7 +423,7 @@
   title = {It’s Costing How Much? {{The}} Truth about Manual Invoice Processing},
   shorttitle = {It’s Costing How Much?},
   author = {Ball, Daniel},
-  date = {2018-05-02T09:03:09+00:00},
+  date = {2018-05-02},
   url = {https://www.smeweb.com/2018/05/02/costing-much-truth-manual-invoice-processing/},
   urldate = {2022-03-28},
   abstract = {By Daniel Ball, director, Wax Digital The paper-based invoice – the thorn in the side of every finance team but a necessary part of doing business. In},
@@ -590,12 +590,14 @@
 }
 
 @article{sklearn,
-  title = {Scikit-Learn: {{Machine}} Learning in {{Python}}},
-  author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  title = {Scikit-Learn: {{Machine}} Learning in Python},
+  author = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Édouard},
   date = {2011},
   journaltitle = {Journal of Machine Learning Research},
   volume = {12},
-  pages = {2825--2830}
+  number = {85},
+  pages = {2825--2830},
+  url = {http://jmlr.org/papers/v12/pedregosa11a.html}
 }
 
 @article{sklearn,
