proof for euclidean and cosine

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -18,6 +18,7 @@
 	\acro{ERP}{Enterprise Resource Planning}
 	\acro{FFNN}{Feed-Forward Neural Network}
 	\acro{GIL}{Global Interpreter Lock}
+	\acro{GPU}{Graphics Processing Unit}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
 	\acro{LDA}{Latent Dirichlet Allocation}
