--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -336,6 +336,18 @@
   file = {/Users/I518232/Zotero/storage/LEN9UCDZ/Fayyad - From Data Mining to Knowledge Discovery in Databas.pdf}
 }
 
+@online{khanRelationshipCosineSimilarity2020,
+  title = {Relationship between {{Cosine Similarity}} and {{Euclidean Distance}}.},
+  author = {Khan, Tanveer},
+  date = {2020-03-10T14:43:52},
+  url = {https://medium.com/ai-for-real/relationship-between-cosine-similarity-and-euclidean-distance-7e283a277dff},
+  urldate = {2022-05-23},
+  abstract = {Many of us are unaware of a relationship between Cosine Similarity and Euclidean Distance. Knowing this relationship is extremely helpful…},
+  langid = {english},
+  organization = {{AI For Real}},
+  file = {/Users/I518232/Zotero/storage/A68LN3WH/relationship-between-cosine-similarity-and-euclidean-distance-7e283a277dff.html}
+}
+
 @report{kochEInvoicingJourney,
   title = {The {{E-Invoicing Journey}} 2019-2025},
   author = {Koch, Bruno},
@@ -430,6 +442,23 @@
   langid = {british},
   organization = {{SME Magazine}},
   file = {/Users/I518232/Zotero/storage/HET2JSWY/costing-much-truth-manual-invoice-processing.html}
+}
+
+@unpublished{mBERT,
+  title = {Making {{Monolingual Sentence Embeddings Multilingual}} Using {{Knowledge Distillation}}},
+  author = {Reimers, Nils and Gurevych, Iryna},
+  date = {2020-10-05},
+  number = {arXiv:2004.09813},
+  eprint = {2004.09813},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  url = {http://arxiv.org/abs/2004.09813},
+  urldate = {2022-05-22},
+  abstract = {We present an easy and efficient method to extend existing sentence embedding models to new languages. This allows to create multilingual versions from previously monolingual models. The training is based on the idea that a translated sentence should be mapped to the same location in the vector space as the original sentence. We use the original (monolingual) model to generate sentence embeddings for the source language and then train a new system on translated sentences to mimic the original model. Compared to other methods for training multilingual sentence embeddings, this approach has several advantages: It is easy to extend existing models with relatively few samples to new languages, it is easier to ensure desired properties for the vector space, and the hardware requirements for training is lower. We demonstrate the effectiveness of our approach for 50+ languages from various language families. Code to extend sentence embeddings models to more than 400 languages is publicly available.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {/Users/I518232/Zotero/storage/QYIB2S72/Reimers and Gurevych - 2020 - Making Monolingual Sentence Embeddings Multilingua.pdf;/Users/I518232/Zotero/storage/AXSD3X3H/2004.html}
 }
 
 @inproceedings{mikolovDistributedRepresentationsWords2013,
@@ -560,6 +589,18 @@
   langid = {german}
 }
 
+@online{schopfParallelInferenceHuggingFace2022,
+  title = {Parallel {{Inference}} of {{HuggingFace Transformers}} on {{CPUs}}},
+  author = {Schopf, Tim},
+  date = {2022-02-22T10:13:51},
+  url = {https://towardsdatascience.com/parallel-inference-of-huggingface-transformers-on-cpus-4487c28abe23},
+  urldate = {2022-05-22},
+  abstract = {An introduction to multiprocessing predictions of large machine learning and deep learning models},
+  langid = {english},
+  organization = {{Medium}},
+  file = {/Users/I518232/Zotero/storage/Z2MYKL2E/parallel-inference-of-huggingface-transformers-on-cpus-4487c28abe23.html}
+}
+
 @online{SCRUMSolo,
   title = {Scrum and the {{Solo Dev}}},
   author = {Gant, Michael},
@@ -587,6 +628,24 @@
   isbn = {978-1-60558-799-8},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/TD6DTQVJ/Sculley - 2010 - Web-scale k-means clustering.pdf}
+}
+
+@unpublished{sentenceBERT,
+  title = {Sentence-{{BERT}}: {{Sentence Embeddings}} Using {{Siamese BERT-Networks}}},
+  shorttitle = {Sentence-{{BERT}}},
+  author = {Reimers, Nils and Gurevych, Iryna},
+  date = {2019-08-27},
+  number = {arXiv:1908.10084},
+  eprint = {1908.10084},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  url = {http://arxiv.org/abs/1908.10084},
+  urldate = {2022-05-22},
+  abstract = {BERT (Devlin et al., 2018) and RoBERTa (Liu et al., 2019) has set a new state-of-the-art performance on sentence-pair regression tasks like semantic textual similarity (STS). However, it requires that both sentences are fed into the network, which causes a massive computational overhead: Finding the most similar pair in a collection of 10,000 sentences requires about 50 million inference computations (\textasciitilde 65 hours) with BERT. The construction of BERT makes it unsuitable for semantic similarity search as well as for unsupervised tasks like clustering. In this publication, we present Sentence-BERT (SBERT), a modification of the pretrained BERT network that use siamese and triplet network structures to derive semantically meaningful sentence embeddings that can be compared using cosine-similarity. This reduces the effort for finding the most similar pair from 65 hours with BERT / RoBERTa to about 5 seconds with SBERT, while maintaining the accuracy from BERT. We evaluate SBERT and SRoBERTa on common STS tasks and transfer learning tasks, where it outperforms other state-of-the-art sentence embeddings methods.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {/Users/I518232/Zotero/storage/33FV7TFL/Reimers and Gurevych - 2019 - Sentence-BERT Sentence Embeddings using Siamese B.pdf;/Users/I518232/Zotero/storage/C59JTX9C/1908.html}
 }
 
 @article{sklearn,
