--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -76,7 +76,9 @@
 \renewcommand*{\chapterpagestyle}{plain}
 \pagestyle{plain}
 %\include{Inhalt/03_Verzeichnisse/formelgroessen}
+\begin{spacing}{0.5}
 \include{Inhalt/03_Verzeichnisse/abkuerzungen}
+\end{spacing}
 \listoffigures                          % Erzeugen des Abbildungsverzeichnisses 
 \listoftables                           % Erzeugen des Tabellenverzeichnisses
 %\renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
