--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -530,6 +530,14 @@
   url = {https://www.ibm.com/cloud/blog/python-vs-r}
 }
 
+@article{rajaramanNeighborSearchHigh,
+  title = {Near {{Neighbor Search}} in {{High Dimensional Data}} (1)},
+  author = {Rajaraman, Anand},
+  pages = {66},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/H7IRCFLL/Rajaraman - Near Neighbor Search in High Dimensional Data (1).pdf}
+}
+
 @online{rDocker,
   title = {R-Base - {{Official Image}}},
   url = {https://hub.docker.com/_/r-base}
@@ -599,6 +607,24 @@
   langid = {english},
   organization = {{Medium}},
   file = {/Users/I518232/Zotero/storage/Z2MYKL2E/parallel-inference-of-huggingface-transformers-on-cpus-4487c28abe23.html}
+}
+
+@incollection{schubertTriangleInequalityCosine2021,
+  title = {A {{Triangle Inequality}} for {{Cosine Similarity}}},
+  author = {Schubert, Erich},
+  date = {2021},
+  volume = {13058},
+  eprint = {2107.04071},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  pages = {32--44},
+  doi = {10.1007/978-3-030-89657-7_3},
+  url = {http://arxiv.org/abs/2107.04071},
+  urldate = {2022-05-23},
+  abstract = {Similarity search is a fundamental problem for many data analysis techniques. Many efficient search techniques rely on the triangle inequality of metrics, which allows pruning parts of the search space based on transitive bounds on distances. Recently, Cosine similarity has become a popular alternative choice to the standard Euclidean metric, in particular in the context of textual data and neural network embeddings. Unfortunately, Cosine similarity is not metric and does not satisfy the standard triangle inequality. Instead, many search techniques for Cosine rely on approximation techniques such as locality sensitive hashing. In this paper, we derive a triangle inequality for Cosine similarity that is suitable for efficient similarity search with many standard search structures (such as the VP-tree, Cover-tree, and M-tree); show that this bound is tight and discuss fast approximations for it. We hope that this spurs new research on accelerating exact similarity search for cosine similarity, and possible other similarity measures beyond the existing work for distance metrics.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Databases,Computer Science - Machine Learning},
+  file = {/Users/I518232/Zotero/storage/8XDXMB7P/Schubert - 2021 - A Triangle Inequality for Cosine Similarity.pdf;/Users/I518232/Zotero/storage/JLNPQ95R/2107.html}
 }
 
 @online{SCRUMSolo,
